# receipt-system

./: .env.example  .gitignore  README.md  alembic.ini  openapi.json  package-lock.json  package.json  pyproject.toml  requirements.txt  test_output.txt
app/: __init__.py  explore.txt  main.py  state.py
app/api/v1/: __init__.py  dashboard.py  dependencies.py  duplicate_check.py  file_management.py  files.py  receipt_approval.py  receipts.py  search.py  settings.py  stats.py
app/core/: config.py  constants.py  logging.py
app/db/: __init__.py  init_db.py  session.py  write_queue.py
app/models/: __init__.py  base.py  category.py  duplicate_check.py  receipt.py  rejection_reason.py  setting.py  tag.py
app/schemas/: __init__.py  common.py  duplicate_check.py  file_management.py  receipt_approval.py  search.py
app/services/: __init__.py  ai_analysis_service.py  category_classifier.py  duplicate_check_service.py  file_monitor_service.py  file_sorting_service.py  ocr_service.py  receipt_analyzer.py  rejection_reason_service.py  search_index_service.py
docs/: SPEC.md
frontend/: .prettierrc  eslint.config.js  package-lock.json  package.json  test_write.txt  tool_test.txt  tsconfig.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vitest.config.ts
frontend/src/: App.vue  main.ts
frontend/src/api/: client.ts  dashboard.ts  index.ts  receipts.ts
frontend/src/components/: DashboardView.vue  DuplicateApprovalView.vue  DuplicateCheckModal.vue  DuplicateCheckView.vue  DuplicateResultView.vue  FinalApprovalView.vue  ReceiptDetailView.vue  ReceiptList.vue  ReceiptListView.vue  SearchView.vue  (+1 more)
migrations/: env.py
migrations/versions/: b693db37cc5a_initial_migration_create_all_tables.py
tests/: conftest.py  test_write_queue.py
tests/services/: test_ai_analysis_service.py  test_category_classifier.py  test_duplicate_check_service.py  test_file_sorting_service.py  test_ocr_service.py  test_receipt_analyzer.py  test_rejection_reason_service.py  test_search_index_service.py
(+64 files in other folders)
